src/surveyinterface/static/css/style.css
html, body {
    width: 100%;
    height: 100%;
    overflow-y: hidden;
    overflow-x: hidden;
    margin: 0;
    padding: 0;
    min-width: 1000px;
}

body,
h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
}

#visualizationContent {
    height: 100%;
    text-align: center;
    width: calc(100% - 300px);
    float: right;
    overflow: hidden;
}

#visualizationContent .dropdown {
    margin-top: 5px;
    margin-left: 17px
}

.thumbnail {
    width: 300px;
    float: left;
    position: absolute;
    border: #ddd solid black;
    border-radius: 0;
}

#surveyContainer .thumbnail {
    text-align: center;
    width: 200px;
}

#surveyContainer .caption {
    width: 100%;
}

.thumbnail .caption {
    padding: 9px;
    color: #333;
    float: left;
    width: 150px;
}

#listQuestions .thumbnail img {
    float: left;
    display: inline;
}

#listQuestions .thumbnail h4, #listQuestions .thumbnail p {
    display: inline;
    float: left;
    width: auto;
}

.dropdown {
    text-align: left;
    position: fixed;
}

.dropdown-menu {
    margin-top: 10px;
}

.dropdown-menu li:not(.divider) a:hover {
    background: #ddd;
}

.thumbnail img {
    height: 50px;
}

/*
.accordion-toggle:after {
    font-family: 'Glyphicons Halflings';
    content: "\e114";
    float: right;
    color: grey;
}*/

#surveyContainer {
    width: 1000px;
    height: calc(100% - 71px);
    margin: auto;
    margin-top: 71px;
}

svg {
    cursor: default;

}

#mainContent {
    height: calc(100% - 70px);
    overflow: auto;
    margin-top: 70px;
}

#listQuestions {
    width: 300px;
    height: 100%;
    overflow-y: scroll;
    overflow-x: hidden;
    float: left;
    margin-bottom: 0;
    border-right: 1px solid #ddd;
}

#listQuestions a, #listQuestions h4 {
    /*width:270px;*/
    color: #000000 !important;
    cursor: default;
    text-decoration: none;
    font-size: 14px;
    margin: 0 !important;
    display: inline-block;
}

text.shadow {
    stroke: white;
    stroke-width: 2.5px;
    opacity: 0.9;
}

#options {
    width: 300px;
    height: 100px;
    float: right;
}

#labels {
    width: 30%;
    height: 100px;
    float: left;
}

.radio input[type=radio], .radio-inline input[type=radio], .checkbox input[type=checkbox], .checkbox-inline input[type=checkbox] {
    float: left;
    margin-left: -10px;
    margin-right: 5px;
}

#options .dropdown {
    width: 198px;
    float: right;
}

#top-bar .btn-group {
    margin: 5px;
    float: right;
    right: 0;
}

#top-bar {
    width: 100%;
    padding: 4px;
    margin-bottom: 5px;
    height: 90px;
}

#map-canvas {
    height: calc(100% - 172px);
    width: calc(100% - 320px);
    margin: 0px 10px;
    border: 1px solid #666;
    position: absolute;
    display: none;
}

.panel-primary {
    border-color: #000000;
}

#captionContainer {
    width: calc(100% - 146px);
    float: left;
    margin-bottom: 0;
    margin-left: 6px;
    border-radius: 0px;
    border-color: #8A7878;
    /* border-top-left-radius: 4px; */
    /* border-top-right-radius: 4px; */
}

.btn-default.disabled {
    color: #FFF;
    background-color: #3D4348 !important;
    border-color: #333 !important;
    -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, .2);
    box-shadow: inset 0 3px 5px rgba(0, 0, 0, .2);
}

#viewContainer {
    width: 133px;
    height: 90px;
    float: right;
    margin-bottom: 0;
    margin-right: 6px;
    -webkit-border-radius: 0px;
    -webkit-border-top-left-radius: 4px;
    -webkit-border-top-right-radius: 4px;
    -moz-border-radius: 0px;
    -moz-border-radius-topleft: 4px;
    -moz-border-radius-topright: 4px;
    border-radius: 0px;
    border-color: #8A7878;
}

#captionContainer .panel-heading, #viewContainer .panel-heading {
    height: 38px;
    background-color: #3D4348;
    border-color: #6D6E72;
    border-top-right-radius: 0px;
    border-top-left-radius: 0px;
}

.caption p {
    clear: left;
}

#btnCategories {
    width: 20px;
    height: 24px;
    border-radius: 1px;
    color: #000;
    background: #FFF;
    border: 1px solid #BBB;
}

#btnCategories:hover {
    border: 1px solid #999;
}

#btnCategories span {
    margin-left: -7px;
    top: -3px;
}

span.btnAdd {
    cursor: pointer;
    font-size: 12px;
    color: #AAA;
    margin-top: 7px;
    display: none;
    float: right;
    right: 15px;
    width: 0;
    height: 0;
}

span.btnAdd:hover {
    color: #777
}

hr {
    margin: 0;
}

.radio, .checkbox {
    display: block;
    min-height: 0;
    margin-top: 0;
    margin-bottom: 0;
    padding-left: 0;
}

#listQuestions .caret {
    margin-left: -15px;
    margin-top: 5px;
}

.caret {
    border-top: 6px solid;
    border-right: 6px solid transparent;
    border-left: 6px solid transparent;
    color: #666;
}

#listQuestions li {
    /*padding:10px 10px;*/
    outline: none;
    list-style-type: none;
}

.panel-collapse li {
    border-bottom: 1px solid #aaa;
}

.panel-collapse li {
    /*padding-top:3px !important;*/
    /*padding-bottom:3px !important;*/
}

.even {
    background: #FFF;
}

.odd {
    background: #EFEFEF;
}

#listQuestions li:not(.indented) {
    border: 1px solid #aaa;
    border-top: 0px;
}

#listQuestions li:hover {
    background-color: rgb(200, 250, 255);
}

.indented {
    /*padding-left:20px !important;*/
    border-left: 10px solid rgb(131, 131, 131);
    border-right: 1px solid #aaa;
}

#CollisionToggleContainer {
    display: inline;
}

.node text {
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.tooltip {
    position: absolute;
    top: 100px;
    left: 100px;
    -moz-border-radius: 5px;
    border-radius: 5px;
    border: 2px solid #000;
    /* background: #222222; */
    background: #fff;
    opacity: .9;
    /* color: #eeeeee; */
    color: black;
    padding: 10px;
    font-size: 12px;
    z-index: 10;
}

.tooltip .title {
    font-size: 13px;
}

.tooltip .name {
    font-weight: bold;
}

#listQuestions a, #listQuestions label {
    font-weight: normal;
    color: #000;
    margin-bottom: 0;
    padding: 5px;
    padding-right: 20px;
    width: 100%;
}

li .checkbox {
    margin-left: 10px;
}

.active {
    background: #C2DBF0 !important;
}

.lead {
    font-size: 18px;
    font-weight: 400;
}

.navbar-nav.navbar-right:last-child {
    margin-right: 0px;
}

.navbar-brand img {
    max-height: 68px;
}

.navbar > .container {
    margin-left: 15px;
}

.navbar .container {
    position: absolute;
    width: 100%;
}

.navbar-brand {
    color: #c8c8c8;
    float: left;
    padding: 0px 15px;
}

.navbar {
    margin-bottom: 0px;
    height: 70px;
    background-image: -webkit-linear-gradient(#484e55, #3a3f44 60%, #313539);
    background-image: -o-linear-gradient(#484e55, #3a3f44 60%, #313539);
    background-image: -webkit-gradient(linear, left top, left bottom, from(#484e55), color-stop(60%, #3a3f44), to(#313539));
    background-image: linear-gradient(#484e55, #3a3f44 60%, #313539);
    background-repeat: no-repeat;
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff484e55', endColorstr='#ff313539', GradientType=0);
    -webkit-filter: none;
    filter: none;
    border: 1px solid rgba(0, 0, 0, 0.6);
    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
}

.navbar-inverse .navbar-brand {
    color: #c9c9c9;
}

.navbar-inverse .navbar-nav > li > a {
    color: #c9c9c9;
}

.intro-header {
    padding-top: 50px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
    padding-bottom: 50px;
    text-align: center;
    color: #f8f8f8;
    background: url(../img/intro-bg.jpg) no-repeat center center;
    background-size: cover;
}

.intro-message {
    position: relative;
    padding-top: 20%;
    padding-bottom: 20%;
}

.intro-message > h1 {
    margin: 0;
    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.6);
    font-size: 5em;
}

.intro-divider {
    width: 100%;
    margin-top: 73px;
    border-top: 1px solid #f8f8f8;
    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
}

.intro-message > h3 {
    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.6);
}

/*#states {*/
    /*fill: #98cac7;*/
/*}*/

/*#states .active {*/
    /*fill: orange;*/
/*}*/

path[data-zip]:hover {
    /*fill: rgba(206, 252, 255, 0.71);*/
    stroke-width: 2px;
    /*stroke: #ff9e18*/
}

path[data-zip] {
    stroke: #999;
    stroke-width: 1px;
}

/*#state-borders {*/
    /*fill: none;*/
    /*stroke: #fff;*/
    /*stroke-width: 1px;*/
    /*stroke-linejoin: round;*/
    /*stroke-linecap: round;*/
    /*pointer-events: none;*/
/*}*/
.mean-base-line{
    fill: none;
    stroke: url(#line-gradient);
    stroke-width: 5px;
}

.vertical-mean-line{
    stroke-width: 2px;
}

